# WhatBin

./: .env.example  .gitignore  BelfastBinsApi.sln  README.md  docker-compose.yml
WhatBin.DataSeeder/: Program.cs  WhatBin.DataSeeder.csproj  appsettings.json
WhatBin.DataSeeder/Data/: BinDbContext.cs
WhatBin.DataSeeder/Models/: BinSchedule.cs
WhatBin.DataSeeder/Parsers/: BinSchedulePdfParser.cs  JobCodeNormalizer.cs
backend/: .dockerignore  .gitignore  BelfastBinsApi.csproj  BelfastBinsApi.http  Dockerfile  Program.cs  README.md  appsettings.json  pyproject.toml
backend/Controllers/: BinLookupController.cs  ChatController.cs  NotificationController.cs
backend/Data/: BinDbContext.cs
backend/Migrations/: 20251111150159_InitialCreate.Designer.cs  20251111150159_InitialCreate.cs  20260301164102_InitialCreate.Designer.cs  20260301164102_InitialCreate.cs  20260302090952_stagingTable.Designer.cs  20260302090952_stagingTable.cs  BinDbContextModelSnapshot.cs
backend/Models/: BinCollection.cs  BinLookupRequest.cs  BinLookupResponse.cs  BinSchedule.cs  ChatRequest.cs  ChatResponse.cs  NotificationLog.cs  SmsSubscription.cs  SmsSubscriptionRequest.cs
backend/Plugins/: BinCollectionPlugin.cs
backend/Properties/: launchSettings.json
backend/Services/: BinScraperService.cs  CollectionScheduleService.cs  NotificationBackgroundService.cs  TwilioSmsService.cs
backend/app/: main.py
frontend/: README.md  angular.json  capacitor.config.ts  ionic.config.json  package-lock.json  package.json
frontend/src/: global.scss  index.html  manifest.webmanifest
(+7 files in other folders)
